[gd_scene load_steps=4 format=2]

[ext_resource path="res://_NonMainGameRelateds/_PreGameHUDRelated/FirstTimeQuestionWSPanel/Subs/FTQ_ChoiceButton/FTQ_ChoiceButton.gd" type="Script" id=1]
[ext_resource path="res://MiscRelated/FontRelated/Fonts/CarolynHandwritten/CarolynHandwrittenMedium-lqry.otf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[node name="FTQ_ChoiceButton" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[connection signal="focus_entered" from="TextureButton" to="." method="_on_TextureButton_focus_entered"]
[connection signal="focus_exited" from="TextureButton" to="." method="_on_TextureButton_focus_exited"]
[connection signal="mouse_entered" from="TextureButton" to="." method="_on_TextureButton_mouse_entered"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
